release 1.0.2 (2009-01/02)
- Fixed issue 191
  https://jersey.dev.java.net/issues/show_bug.cgi?id=191
  ResourceConfig.isProviderClass and ResourceConfig.isRootResourceClass return
  false if the class parameter is null.
  This fixes an issue with the SpringComponentProviderFactory throwing an NPE
  for abstract Spring beans.
- Added support for a RenderedImage provider for consuming and producing images.
  For producing images the Java type must be assignable to RenderedImage. Any
  media type that is compatible with "image/*" is supported, but the actual
  image formats supported is restricted to the image readers registered with
  the Java imaging API.
  When consuming images the Java type RenderedImage or BufferedImage may be used.
  The media types supported for consuming are "image/*" and 
  "application/octet-stream". For the former the actual image formats supported
  is restricted to the image writers registered with the Java imaging API.
  For the latter the Java image API will determine the appropriate
  image format (if supported) from the contents of the entity body.
- Fixed issue 188
  https://jersey.dev.java.net/issues/show_bug.cgi?id=188
  Servlet consumes the request of the type "application/x-www-form-urlencoded"
  when HttpServletRequest.getParamter(...) and related methods are called.
  Jersey constructs a Form instance from the request parameters such that
  resource methods that utilize @FormParam will work as expected.
- Fixed issue 164
  https://jersey.dev.java.net/issues/show_bug.cgi?id=164
  Added ClientResponse.getResponseDate() to obtain the value of "Date" header.
- Fixed issue 184
  https://jersey.dev.java.net/issues/show_bug.cgi?id=184
  Implemented URLConnectionClientHandler.URLConnectionResponse.toString() to
  return the HTTP method, request URL and status code.
- Fixed issue 134
  https://jersey.dev.java.net/issues/show_bug.cgi?id=134
  Added support for resource specific filters and support for @RolesAllowed