@@ -91,7 +91,7 @@
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/apidocs/jsr311</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/apidocs/jsr311</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey</groupId>
@@ -100,7 +100,7 @@
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/apidocs/jersey</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/apidocs/jersey</outputDirectory>
                                 </artifactItem>
                                 <!-- contribs-->
                                 <artifactItem>
@@ -110,7 +110,7 @@
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/apidocs/contribs/jersey-spring</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/apidocs/contribs/jersey-spring</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey.contribs</groupId>
@@ -119,7 +119,7 @@
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/apidocs/contribs/jersey-multipart</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/apidocs/contribs/jersey-multipart</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey.contribs</groupId>
@@ -128,7 +128,7 @@
                                     <type>jar</type>
                                     <classifier>javadoc</classifier>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/apidocs/contribs/jersey-atom-abdera</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/apidocs/contribs/jersey-atom-abdera</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -148,7 +148,7 @@
                                     <version>1.0</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey</groupId>
@@ -156,7 +156,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey</groupId>
@@ -164,7 +164,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey</groupId>
@@ -172,7 +172,23 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.jersey</groupId>
+                                    <artifactId>jersey-atom</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.sun.jersey</groupId>
+                                    <artifactId>jersey-fastinfoset</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey</groupId>
@@ -180,7 +196,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>asm</groupId>
@@ -188,7 +204,7 @@
                                     <version>3.1</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.codehaus.jettison</groupId>
@@ -196,7 +212,7 @@
                                     <version>1.0.1</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}</outputDirectory>
+                                    <outputDirectory>${assembly.directory}</outputDirectory>
                                 </artifactItem>
                                 <!-- contribs -->
                                 <artifactItem>
@@ -205,7 +221,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/contribs</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/contribs</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey.contribs</groupId>
@@ -213,7 +229,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/contribs</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/contribs</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.sun.jersey.contribs</groupId>
@@ -221,7 +237,7 @@
                                     <version>${project.version}</version>
                                     <type>jar</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${aux.directory}/contribs</outputDirectory>
+                                    <outputDirectory>${assembly.directory}/contribs</outputDirectory>
                                 </artifactItem>
                            </artifactItems>
                         </configuration>
@@ -249,7 +265,7 @@
     </build>
 
     <properties>
-      <aux.directory>${project.build.directory}/aux</aux.directory>
+      <assembly.directory>${project.build.directory}/assembly</assembly.directory>
     </properties>
 
     <repositories>
